# automaton

./: .env.example  .gitignore  README.md  desktop_app.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  coordinator.py  feature_analyzer.py  master_coordinator.py  pr_generator.py
src/core/: __init__.py  config.py  coordination.py  events.py  logger.py
src/io_layer/: __init__.py  file_browser.py  native_file_browser.py  progress_publisher.py  system_controller.py  task_manager.py
src/ui/: __init__.py  settings_dialog.py
